feat: enhance UI components and implement chat features
- Updated MainBanner component to improve layout responsiveness.
- Refactored ChatWindow component by introducing ChatBox, ChatInput, and ChatNav for better modularity.
- Added AmountDisplaySection and AmountDisplayWebSection for improved balance display.
- Enhanced AmountIncomeAndSpentChart with gradient fills for better visual representation.
- Improved FavouriteCard and FavouriteList components for a more engaging user experience.
- Updated styles in index.css for new color variables and improved design consistency.
- Introduced new shortcuts and sections in HomePage for better navigation.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,11 +51,22 @@
   --color-black-pearl-800: #062236;
   --color-black-pearl-900: #041a29;
 
-  --color-body: #1E2939;
+  --color-custom-secondary-50: #fff9e6;
+  --color-custom-secondary-100: #ffecb2;
+  --color-custom-secondary-200: #ffe28d;
+  --color-custom-secondary-300: #ffd559;
+  --color-custom-secondary-400: #ffcd39;
+  --color-custom-secondary-500: #ffc107;
+  --color-custom-secondary-600: #e8b006;
+  --color-custom-secondary-700: #b58905;
+  --color-custom-secondary-800: #8c6a04;
+  --color-custom-secondary-900: #6b5103;
+
+  --color-body: #1e2939;
   --color-title: #101828;
   --color-subtitle: #364153;
-  --color-caption: #F9FAFB;
-  --color-surface-default:#F3F4F6
+  --color-caption: #f9fafb;
+  --color-surface-default: #f3f4f6;
 }
 
 :root {
